# JotacraftGL

./: CMakeLists.txt  README.md
assets/shaders/: default.frag  default.vert  outline.frag  outline.vert  ui.frag  ui.vert
include/: application.hpp  camera.hpp  game.hpp  math.hpp  player.hpp
include/graphics/: atlas_coord.hpp  atlas_texture.hpp  chunk_mesh.hpp  light.hpp  light_engine.hpp  mesh.hpp  mesher.hpp  shader.hpp  vertex.hpp
include/graphics/hud/: gui_atlas.hpp  gui_element.hpp  gui_registry.hpp  gui_renderer.hpp  hotbar.hpp  mesh_2d.hpp  renderer_2d.hpp
include/graphics/shapes/: outline_cube.hpp  quad.hpp  sphere.hpp
include/platform/: imgui_handler.hpp  system_info.hpp  window.hpp
include/world/: block.hpp  block_registry.hpp  chunk.hpp  chunk_position.hpp  noise.hpp  outline_renderer.hpp  world.hpp  world_interaction.hpp  world_renderer.hpp
scripts/: compile-windows.sh  distribution.sh  run.sh
src/: application.cpp  camera.cpp  game.cpp  player.cpp
src/graphics/: light_engine.cpp  mesh.cpp  mesher.cpp  shader.cpp  texture.cpp
src/graphics/hud/: gui_registry.cpp  gui_renderer.cpp  hotbar.cpp  mesh_2d.cpp  renderer_2d.cpp
src/platform/: imgui_handler.cpp  system_info.cpp  window.cpp
src/world/: block_registry.cpp  chunk.cpp  noise.cpp  outline_renderer.cpp  world.cpp  world_interaction.cpp  world_renderer.cpp
